# mav_precision_landing

./: CMakeLists.txt  README.md  package.xml
launch/: basic.launch  marker.launch  stereo.launch
models/marker_35/: model.config  model.sdf
models/marker_35/meshes/: box_marker_35.dae
src/: land_mav.py  main.py  make_trajectory.py  marker_pose_estimator.py  mav_position.py  utils.py
worlds/: bin.txt  marker_world.world
